Enhance base resp
